tests/fixtures/valid/modules/simple_import/main.py
import math_utils

x: int = math_utils.add(5, 3)
y: int = math_utils.multiply(4, 7)
z: int = math_utils.square(6)

print(x)
print(y)
print(z)
