tests/fixtures/invalid/int_bitor_float.py
# Test int bitwise OR with float (should fail)
x: int = 5
y: float = 3.14
result: int = x | y
